vlib/v/checker/tests/use_byte_instead_of_u8_err.vv
type Byte = byte

fn foo(_ byte) {}

fn main() {
	_ := byte(0)
	_ := fn(_ byte) {}
}